# hakai-erddap

./: .gitignore  .sqlfluff  DasDds.sh  Dockerfile  Dockerfile-Caprover  GenerateDatasetsXml.sh  HakaiSeaspanRoyalNMEA.xml  Makefile  README.md  SeaspanRoyalSuperCO2_OriginalFiles.xml  build.sh  captain-definition  datasets.d.sh  docker-compose-local.yml  docker-compose-portainer.yml  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  erddap_create_views.sh  generate_datasets.py  generate_view_sql.py  pyproject.toml  sample.env  tash  test.md  update-erddap.sh  update_erddap_views.py
cloudflare/: Dockerfile  README.md  apache.conf  logger.py  main.py  pyproject.toml  sample.env  settings.py
cloudflare/src/: logger.py  main.py  settings.py
cloudflare/tests/: test_main.py
datasets/: HakaiADCPTimeSeriesProfileProvisional.xml  HakaiBaynesSoundBoL5min.xml  HakaiBottleCompleteProvisional.xml  HakaiBottleReducedProvisional.xml  HakaiCTDDFO2.xml  HakaiCTDFZH01.xml  HakaiCTDKC10.xml  HakaiCTDPRUTH.xml  HakaiCTDProvisional.xml  HakaiCTDQCS01.xml  (+45 more)
datasets.d/: HakaiADCPTimeSeriesProfileProvisional.xml  HakaiBIOOSBuoy1hour.xml  HakaiBIOOSBuoyResearch.xml  HakaiBamfieldBoL5min.xml  HakaiBamfieldBoLResearch.xml  HakaiBaynesSoundBoL5min.xml  HakaiCalvertCP1TideGauge.xml  HakaiChlorophyllSampleProvisional.xml  HakaiChlorophyllSampleResearch.xml  HakaiColumbiaFerryResearch.xml  HakaiHPLCResearch.xml  HakaiKCBuoy1hour.xml  HakaiKCBuoyResearch.xml  HakaiKetchikanBoL5min.xml  HakaiKetchikanBoLResearch.xml  HakaiMooredTimeSeriesResearch.xml  HakaiNovaBoL5min.xml  HakaiOrfordBuoy1hour.xml  HakaiPearlBoL5min.xml  HakaiPearlBoLResearch.xml  HakaiPruthDockProvisional.xml  HakaiPruthMooringProvisional.xml  HakaiQU5MMooringProvisional.xml  HakaiQuadraBoL5min.xml  HakaiQuadraBoLResearch.xml  HakaiQuadraLimpet5min.xml  HakaiQuadraWeather5min.xml  HakaiRiversInletMooringResearch.xml  HakaiSentinelTemperature.xml  HakaiSewardBoL5min.xml  HakaiSitkaBoL5min.xml  HakaiSitkaBoLResearch.xml  HakaiWaterPropertiesInstrumentProfileProvisional.xml  HakaiWaterPropertiesInstrumentProfileResearch.xml  HakaiWatershedsStreamStationsProvisional.xml  HakaiWatershedsStreamStationsResearch.xml  HakaiWirewalkerProvisional.xml  NatureTrustWaterPropertiesVerticalProfilesProvisionalAhousahtFirstNation.xml  NatureTrustWaterPropertiesVerticalProfilesProvisionalCounciloftheHaidaNation.xml  NatureTrustWaterPropertiesVerticalProfilesProvisionalCowichanTribes.xml  (+66 more)
datasets.d.development/: Hakai50WatershedStreams.xml  HakaiBottleReducedProvisional.xml  HakaiSeaspanRoyalNMEA.xml  HakaiWeatherStationsProvisional.xml  HakaiWeatherStationsResearch.xml
(+161 files in other folders)
