

[tool.poetry]
name = "hakai-datasets"
version = "0.1.0"
description = ""
authors = ["Jessy Barrette <30420025+JessyBarrette@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
hakai-metadata-conversion = {git = "https://github.com/HakaiInstitute/hakai-metadata-conversion.git", rev = "update-erddap-xml"}
gitpython = "^3.1.43"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
