[project]
name = "hakai-erddap"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "jinja2>=3.1.6",
    "pathvalidate>=3.3.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.41",
]

[tool.uv.workspace]
members = [
    "cloudflare",
]
