[project]
name = "cloudflare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudstile>=2.0.1",
    "fastapi>=0.118.0",
    "jwt>=1.4.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "typing>=3.10.0.0",
    "uvicorn>=0.37.0",
]
