[project]
name = "cloudflare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "cloudstile>=2.0.1",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.22.0",
    "httpx>=0.27.0",
    "black>=24.3.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]